--- a/src/components/Profile/Header/style.css
+++ b/src/components/Profile/Header/style.css
@@ -8,10 +8,10 @@
 }
 
 .profile-header-title {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #111827;
-  margin-bottom: 0.5rem;
+  font-size: 1.875rem; 
+  font-weight: bold;
+  color: #1f2937; 
+  margin-bottom: 1.0rem;
 }
 
 .profile-header-categories {
