sửa giao diện 09/9

--- a/src/components/DetailDuAn/DiemNoiBat/style.css
+++ b/src/components/DetailDuAn/DiemNoiBat/style.css
@@ -20,20 +20,19 @@
     margin-bottom: 10px;
   }
   
-  .view-more {
-    display: inline-block;
+  .view-more-duan {
+    background: none;
+    border: none;
     color: #007bff;
-    text-decoration: none;
     font-size: 0.9em;
     font-weight: bold;
-    padding: 5px 10px;
-    border: 1px solid #007bff;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    text-decoration: underline;
+    cursor: pointer;
+    padding: 0;
   }
   
-  .view-more:hover {
-    text-decoration: underline;
+  .view-more-duan:hover {
+    color: #0056b3;
   }
+  
   
