--- a/src/components/DetailPhanKhu/SlideAlbumPhanKhu/style.css
+++ b/src/components/DetailPhanKhu/SlideAlbumPhanKhu/style.css
@@ -371,6 +371,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: border-color 0.3s ease, color 0.3s ease;
+  gap: 10px;
 }
 
 .phankhu-icon-item:hover {
